fix spacing login page and remove timeouts

--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -33,10 +33,13 @@
 
 .login-container {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     width: 70%;
+}
+
+.login-container img {
+    margin: 30px;
 }
 
 .logo-audi-lufthansa {
